Fix height alignment of collapsible-icon::after

--- a/web/collapsible.css
+++ b/web/collapsible.css
@@ -26,7 +26,7 @@
   width: 22px;
   height: 22px;
   left: -6px;
-  top: -3px;
+  top: -2px;
 }
 
 .is-collapsed .collapse-icon {
